# PawPulseAI

./: .gitignore  README.md
backend/: .env.example  README.md  requirements.txt  seed_demo_data.py  test_iap.py  test_push.py  test_push_new.py
backend/app/: main.py
backend/app/core/: config.py
backend/app/db/: base.py
backend/app/models/: schemas.py
backend/app/services/: anomaly.py  ingestion.py  normalization.py  receipt_validator.py
backend/pawpulse_ml/: __init__.py  engine.py
backend/pawpulse_ml/features/: preprocessor.py
backend/pawpulse_ml/output/: formatter.py
engine/: README.md  pyproject.toml
engine/pawpulse_ml/: cli.py
engine/pawpulse_ml/baseline/: learner.py
engine/pawpulse_ml/detectors/: anomaly.py  trends.py
engine/pawpulse_ml/features/: preprocessor.py
engine/pawpulse_ml/utils/: breed_priors.py
engine/tests/: test_engine.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx  PetCard.tsx
frontend/src/hooks/: useFeatures.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  Onboarding.tsx  PetDetail.tsx  Settings.tsx  Subscription.tsx  VetReport.tsx
frontend/src/services/: alertService.ts  authService.ts  healthService.ts  petService.ts  practiceService.ts  subscriptionService.ts
frontend/src/types/: index.ts
mobile/: App.tsx  README.md  app.json  package-lock.json  package.json
mobile/src/api/: client.ts
mobile/src/components/: OfflineIndicator.tsx  PetCard.tsx
mobile/src/context/: AuthContext.tsx
(+30 files in other folders)
